Enable multiple xsd and sch resources for ad-hoc validation
